--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "engines": {
+    "node": "^8.10.0 || ^10.13.0 || >=11.10.1"
+  }
 }
